--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,6 +73,13 @@ label {
 form {
   width: 60%;
   margin: 0 auto; }
+  @media (max-width: 800px) {
+    form {
+      width: 85%; }
+      form button#send {
+        display: block;
+        margin: 1em auto;
+        width: 60%; } }
 
 figure {
   margin: 0; }
@@ -93,10 +100,18 @@ header#globalHeader {
   background-color: #FCFCF8;
   height: 4.5em;
   position: relative;
-  z-index: 5; }
+  z-index: 11; }
+  @media (max-width: 800px) {
+    header#globalHeader {
+      height: 3em; } }
   header#globalHeader #logo-wrap {
     width: 60%;
     display: inline-block; }
+    @media (max-width: 800px) {
+      header#globalHeader #logo-wrap {
+        width: 80%;
+        height: inherit;
+        overflow: hidden; } }
     header#globalHeader #logo-wrap h1 {
       display: inline-block;
       text-transform: uppercase;
@@ -106,6 +121,10 @@ header#globalHeader {
       font-weight: 300;
       font-size: 1.6em;
       float: left; }
+      @media (max-width: 800px) {
+        header#globalHeader #logo-wrap h1 {
+          margin-top: 1em;
+          font-size: 1.3em; } }
     header#globalHeader #logo-wrap a.homeBtn {
       display: block;
       height: 4em;
@@ -120,6 +139,11 @@ header#globalHeader {
       width: 4em;
       height: 4em;
       float: left; }
+      @media (max-width: 800px) {
+        header#globalHeader #logo-wrap #headerIcon {
+          width: 3em;
+          height: 3em;
+          margin: 0 .4em; } }
       header#globalHeader #logo-wrap #headerIcon .logo {
         height: 100%;
         width: 100%;
@@ -127,34 +151,87 @@ header#globalHeader {
   header#globalHeader #desk-nav {
     height: inherit;
     position: relative;
-    z-index: 10;
+    z-index: 12;
     background-color: #FCFCF8; }
-    header#globalHeader #desk-nav nav {
+    header#globalHeader #desk-nav > nav {
       display: inline-block;
       width: 39%;
       float: right; }
-      header#globalHeader #desk-nav nav ul {
+      @media (max-width: 800px) {
+        header#globalHeader #desk-nav > nav {
+          display: none; } }
+      header#globalHeader #desk-nav > nav ul {
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
         margin-top: 2.5em; }
-        header#globalHeader #desk-nav nav ul li {
+        header#globalHeader #desk-nav > nav ul li {
           -webkit-flex-grow: 1;
           flex-grow: 1;
           border-right: 1px solid #222;
           list-style-type: none; }
-          header#globalHeader #desk-nav nav ul li:last-child {
+          header#globalHeader #desk-nav > nav ul li:last-child {
             border: none; }
-          header#globalHeader #desk-nav nav ul li a {
+          header#globalHeader #desk-nav > nav ul li a {
             display: block;
             text-align: center;
             font-weight: 300; }
 
-#mobileNav {
-  display: none; }
-
 button#mobileNavBtn {
   display: none; }
+  @media (max-width: 800px) {
+    button#mobileNavBtn {
+      display: block;
+      float: right;
+      height: 45px;
+      width: 45px;
+      margin: .45em;
+      background-color: inherit;
+      border: .2em solid #222;
+      border-radius: .5em;
+      cursor: pointer;
+      position: relative;
+      top: 0;
+      padding: 0; }
+      button#mobileNavBtn svg#menu-bar {
+        position: relative;
+        height: inherit;
+        width: inherit;
+        top: 0;
+        left: 0px; } }
+
+#mobileNav nav {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  z-index: 11;
+  top: 0;
+  transition: .4s all ease-in-out; }
+  #mobileNav nav:ng-hide {
+    transform: translateY(-13em); }
+  #mobileNav nav ul {
+    list-style-type: none;
+    padding: 0.6em;
+    margin: 0;
+    background-color: #222; }
+    #mobileNav nav ul li {
+      padding: .3em .5em;
+      border-bottom: 1px solid #FCFCF8; }
+      #mobileNav nav ul li a {
+        color: #FCFCF8;
+        display: block; }
+      #mobileNav nav ul li:first-child {
+        padding-top: 1.2em; }
+      #mobileNav nav ul li:last-child {
+        border-bottom: none; }
+#mobileNav .mobile-nav-background {
+  position: absolute;
+  height: 100vh;
+  top: 0;
+  width: 100%;
+  background-color: #222;
+  opacity: .5;
+  z-index: 5; }
 
 /* ------------------  Content Elements ------------------------------  */
 div.row,
@@ -186,6 +263,9 @@ div#contentSection {
     margin: 3em auto 6em;
     background-color: rgba(252, 252, 248, 0.96);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); }
+    @media (max-width: 800px) {
+      div#contentSection > section {
+        width: 95%; } }
   div#contentSection #homePageContent {
     min-height: 450px; }
     div#contentSection #homePageContent h2:last-child {
@@ -199,48 +279,62 @@ div#contentSection {
     padding-bottom: 1em; }
 
 article.in-house-projects h2 {
-  padding-top: 1em; }
+  padding-top: 1em;
+  margin: 0; }
 
 /* -------------------- ABOUT PAGE ------------------------------------------ */
 section#aboutPageContent {
   min-height: 450px; }
-  section#aboutPageContent .profileBox {
-    width: 23%;
-    max-height: 14em;
-    max-width: 27%;
-    color: #fff;
-    margin: 2em;
-    overflow: hidden;
-    position: relative;
-    z-index: 13;
-    float: left; }
-    section#aboutPageContent .profileBox:hover div.employeeDetails {
-      top: -2.8em; }
-    section#aboutPageContent .profileBox div.employeeDetails {
-      position: relative;
-      top: -1.7em;
+  section#aboutPageContent .employee-profile {
+    -webkit-display: flex;
+    display: flex; }
+    section#aboutPageContent .employee-profile .profileBox {
+      max-height: 18em;
+      color: #fff;
+      margin: 2em;
+      overflow: hidden;
+      max-width: 30%; }
+      section#aboutPageContent .employee-profile .profileBox .portrait {
+        background-color: #98BDA0; }
+        @media (max-width: 1100px) {
+          section#aboutPageContent .employee-profile .profileBox .portrait {
+            display: block;
+            margin: 0 auto; } }
+      @media (max-width: 1100px) {
+        section#aboutPageContent .employee-profile .profileBox {
+          max-width: 100%;
+          width: 100%;
+          display: block; } }
+      @media (max-width: 800px) {
+        section#aboutPageContent .employee-profile .profileBox {
+          display: block;
+          width: 100%;
+          float: none;
+          margin: 1em auto; } }
+    section#aboutPageContent .employee-profile div.employeeDetails {
+      max-width: 60%;
       padding: .3em;
-      box-sizing: border-box;
-      background-color: rgba(0, 0, 0, 0.5);
-      -webkit-transition: .5s ease-in-out;
-      -moz-transition: .5s ease-in-out;
-      transition: .5s ease-in-out; }
-      section#aboutPageContent .profileBox div.employeeDetails p {
-        padding: 0; }
-  section#aboutPageContent figure.portrait {
-    background-color: #98BDA0;
-    background-size: cover;
-    background-position: center;
-    height: 14em;
-    width: 100%; }
-    section#aboutPageContent figure.portrait.erik {
-      background-image: url("../img/erik.jpg"); }
-    section#aboutPageContent figure.portrait.default {
-      background-image: url("../img/default-user.png"); }
+      box-sizing: border-box; }
+      section#aboutPageContent .employee-profile div.employeeDetails h2, section#aboutPageContent .employee-profile div.employeeDetails h3 {
+        text-align: left;
+        margin: 0;
+        padding: 1em 0 0.5em 0; }
+      section#aboutPageContent .employee-profile div.employeeDetails p {
+        padding: 0;
+        margin: 0; }
+      @media (max-width: 1100px) {
+        section#aboutPageContent .employee-profile div.employeeDetails {
+          max-width: 100%;
+          width: 100%;
+          padding: 1em; } }
 
 section#aboutPageContent > .page-wrap > div.row > p {
   width: 60%;
   padding: 2em .2em; }
+  @media (max-width: 800px) {
+    section#aboutPageContent > .page-wrap > div.row > p {
+      width: 100%;
+      padding: 2em; } }
 
 section#aboutPageContent > .page-wrap > div.row > span.row-separator {
   width: 92%;
@@ -270,11 +364,13 @@ section#companyProfile > article ul {
 section#companyProfile > article p:last-child {
   padding: .2em 2em 2em; }
 section#companyProfile > article h3 {
-  text-align: left; }
+  text-align: left;
+  margin: 0; }
 section#companyProfile > article li {
   padding-right: 1em; }
 section#companyProfile > article.client-design-services > h2 {
-  width: 100%; }
+  width: 100%;
+  margin: 0; }
 section#companyProfile > article.client-design-services > div.row {
   width: 50%; }
 
@@ -375,6 +471,13 @@ div.background-array figure {
   align-self: flex-start;
   background-size: cover;
   background-position: center; }
+  @media (max-width: 800px) {
+    div.background-array figure {
+      min-width: 49%;
+      width: 50%; } }
+  @media (max-width: 500px) {
+    div.background-array figure {
+      min-width: 100%; } }
   @media only screen and (-webkit-min-device-pixel-ratio: 1), only screen and (min--moz-device-pixel-ratio: 1), only screen and (min-device-pixel-ratio: 1), only screen and (min-resolution: 96dpi), only screen and (min-resolution: 1dppx) {
     div.background-array figure.bolt {
       background-image: url("../img/array_bolt.jpg"); } }
