--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,6 +1,7 @@
 <section id="homePageContent">
   <div ng-repeat="section in sections">
-    <h3>{{section.heading}}</h3>
+    <h2>{{section.heading}}</h2>
     <p>{{section.content}}</p>
   </div>
+  <h2>Our Motto: Creativity, Quantified.</h2>
 </section>
