--- a/public/views/admin/about.html
+++ b/public/views/admin/about.html
@@ -52,6 +52,11 @@
       <label for="name">Employee's Bio</label>
       <input type="text" class="form-control" ng-model="employee.bio">
     </div>
+    <div class="form-group">
+      <label for="image">Employee Image</label>
+      <img src="{{newImage}}" class="img"/>
+      <button class="btn btn-success" ng-click="upload()">Change Image</button>
+    </div>
     <button class="btn btn-primary" ng-click="updateEmployee(employee)">Update Employee</button>
     <button class='btn btn-primary' ng-click="deleteEmployee(employee)">Delete Employee</button>
   </form>
