--- a/public/views/index.html
+++ b/public/views/index.html
@@ -27,6 +27,7 @@
   <!-- libraries -->
   <script src="libs/angular/angular.min.js"></script>
   <script src="libs/angular-route/angular-route.min.js"></script>
+  <script src="libs/angular-animate/angular-animate.min.js"></script>
   <script src="libs/filepicker-js/filepicker.js"></script>
   <script src="libs/angular-filepicker/dist/angular_filepicker.js"></script>
 
