Resolved styles for major mac os browser configs, added thank you message window/view after submitting form, improving ui.

--- a/public/css/background.scss
+++ b/public/css/background.scss
@@ -26,6 +26,7 @@ div.background-array figure {
 	}
 	@include small {
 		min-width: 100%;
+		min-height: 200px;
 	}
 	&.bolt {
 		@include screens {
