--- a/public/views/header.html
+++ b/public/views/header.html
@@ -13,7 +13,7 @@
         <li><a href='/contact'>Contact</a></li>
       </ul>
     </nav>
-    <button id='mobileNavBtn' ng-click="showMobileNav()">
+    <button id='mobileNavBtn' ng-click="showMobileNav()" ng-class="{active: mobileActive}">
       <svg version="1.1" id="menu-bar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"' +
         'viewBox="0 0 0 0" enable-background="new 0 0 0 0" xml:space="preserve">
       <path class="bar" fill="#222222" d="M36.5,11.7h-33C2.7,11.7,2,11,2,10.2v0c0-0.8,0.7-1.5,1.5-1.5h33c0.8,0,1.5,0.7,1.5,1.5v0C38,11,37.3,11.7,36.5,11.7z"/>
@@ -31,5 +31,5 @@
          <li><a href='/contact' ng-click="showMobileNav()">Contact</a></li>
        </ul>
      </nav>
-     <div class="mobile-nav-background"></div>
+     <div class="mobile-nav-background" ng-click="showMobileNav()"></div>
    </div>
