Modified css url to load over https.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,7 +7,7 @@
     <base href="/main">
     <title>Norgren Designs</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
 
 </head>
